--- a/cv-one-page.tex
+++ b/cv-one-page.tex
@@ -140,7 +140,7 @@
 \textbf{南京航空航天大学}, 光电信息科学与工程, \textit{工学学士}. \signed{2017 - 2021} \\
 \begin{minipage}[t]{\linewidth}
     \begin{itemize}[nosep,after=\strut, leftmargin=1em, itemsep=3pt]
-        \item[-] 获国家励志奖学金(2020), 优秀学生奖学金(2020)，学业奖学金(2018，2019，2020).
+        \item[-] 获国家励志奖学金(2020), 优秀学生奖学金(2020), 学业奖学金(2018, 2019, 2020).
         \item[-] 主持和参与省级科创项目两项, 校级科创项目一项. 获省级竞赛二等奖一项, 三等奖一项, 国家级竞赛三等奖一项. 获得南京航空航天大学 2021 届"学术专长"类推免资格.
     \end{itemize}
 \end{minipage}\\
@@ -155,7 +155,7 @@
 \begin{minipage}[t]{\linewidth}
     \begin{itemize}[nosep,after=\strut, leftmargin=1em, itemsep=3pt]
         \item[-] 项目中, 我们设计了一种微小尺度的电磁传感器, 并且使用专用 IC 驱动该传感器.
-        \item[-] 该传感器被用来采集电磁线圈与被测金属表面之间的电磁阻抗强度, 其代表传感器和被测金属表面之间的距离.
+        \item[-] 该传感器采集电磁线圈与被测金属表面之间的电磁阻抗强度(传感器和被测金属表面之间的距离).
         \item[-] 为实现自动扫描, 我们搭建了一个步进电机驱动的二维运动平台, 使用 G-code 实现对其的控制.
     \end{itemize}
 \end{minipage}
